# brave-core

./: EXTRA_DEPS  package-lock.json  package.json  pnpm-workspace.yaml
android/: BUILD.gn  brave_java_sources.gni
app/: brave_origin_strings.grd  brave_strings.grd  generated_resources.grd  generated_resources_override.grd  glic_strings.grdp  os_settings_strings.grdp  settings_strings.grdp
browser/: about_flags.cc  brave_content_browser_client.cc  brave_profile_prefs.cc  sources.gni
chromium_src/services/passage_embeddings/: DEPS  passage_embeddings_service.cc  sources.gni
components/: autofill_strings.grdp  omnibox_strings.grdp  personal_context_strings.grdp
patches/: DEPS.patch  base-BUILD.gn.patch  base-feature_list.cc.patch  base-feature_list.h.patch  build-android-gradle-generate_gradle.py.patch  build-config-android-internal_rules.gni.patch  chrome-BUILD.gn.patch  chrome-android-BUILD.gn.patch  chrome-android-chrome_java_sources.gni.patch  chrome-android-java-AndroidManifest.xml.patch  chrome-android-java-src-org-chromium-chrome-browser-ChromeTabbedActivity.java.patch  chrome-android-java-src-org-chromium-chrome-browser-app-ChromeActivity.java.patch  chrome-android-java-src-org-chromium-chrome-browser-app-appmenu-AppMenuPropertiesDelegateImpl.java.patch  chrome-android-java-src-org-chromium-chrome-browser-contextmenu-ChromeContextMenuPopulator.java.patch  chrome-android-java-src-org-chromium-chrome-browser-ntp-NewTabPage.java.patch  chrome-android-java-src-org-chromium-chrome-browser-settings-search-SearchIndexProviderRegistry.java.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-actor-site_policy.cc.patch  chrome-browser-app_controller_mac.mm.patch  chrome-browser-bookmarks-android-BUILD.gn.patch  chrome-browser-browsing_data-BUILD.gn.patch  chrome-browser-browsing_data-chrome_browsing_data_remover_delegate.cc.patch  chrome-browser-extensions-BUILD.gn.patch  chrome-browser-extensions-api-identity-identity_get_auth_token_function.cc.patch  chrome-browser-global_features.cc.patch  chrome-browser-metrics-chrome_feature_list_creator.cc.patch  chrome-browser-prefs-BUILD.gn.patch  chrome-browser-prefs-browser_prefs.cc.patch  chrome-browser-renderer_context_menu-render_view_context_menu.cc.patch  chrome-browser-renderer_context_menu-render_view_context_menu.h.patch  chrome-browser-resources-settings-BUILD.gn.patch  chrome-browser-resources-settings-privacy_page-privacy_page.html.patch  chrome-browser-resources-settings-privacy_page-privacy_page.ts.patch  chrome-browser-resources-settings-route.ts.patch  chrome-browser-resources-settings-settings.ts.patch  chrome-browser-sessions-BUILD.gn.patch  (+114 more)
services/passage_embeddings/: BUILD.gn  DEPS  brave_litert_passage_embedder.cc  brave_litert_passage_embedder.h  brave_litert_passage_embedder_unittest.cc
(+149 files in other folders)
