# Copyright (c) 2026 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

# Deps needed by the chromium_src override of passage_embeddings_service.cc,
# which swaps upstream's tflite embedder for Brave's LiteRT one.
brave_chromium_src_services_passage_embeddings_deps = [
  "//brave/components/local_ai/buildflags",
  "//brave/services/passage_embeddings:litert_passage_embedder",
]
